--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,8 +2,12 @@ body {
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     font-size: 18px;
     line-height: 34px;
-    color: #777;
-    background: url("../images/concrete_seamless.png");
+    color: #F9EBEE;
+    background: url("../images/Coffee_Beans.jpg") no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 
 * {
@@ -14,7 +18,7 @@ h1,
 h2 {
     font-family: Georgia, Times, "Times New Roman", serif;
     font-weight: 700;
-    color: #1424E4;
+    color: #de9e86;
 }
 h2 {
 	font-size: 26px;
